--- a/app/src/main/res/layout/team_list_items.xml
+++ b/app/src/main/res/layout/team_list_items.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
 
     android:orientation="horizontal"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        />
-
+    <ImageView
+        android:id="@+id/emblem"
+        android:layout_width="138dp"
+        android:layout_height="138dp"
+        android:contentDescription="emblem"/>
 </LinearLayout>
