--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -3,12 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.standings.DetailsActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/competitions"
+        android:id="@+id/standings"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-       >
-    </androidx.recyclerview.widget.RecyclerView>
+        />
 </LinearLayout>
