--- a/app/src/main/res/layout/competition_list_items.xml
+++ b/app/src/main/res/layout/competition_list_items.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
+        android:background="@color/white"
         android:id="@+id/emblem"
         android:layout_width="138dp"
         android:layout_height="138dp"
