--- a/app/src/main/res/layout/standings_item.xml
+++ b/app/src/main/res/layout/standings_item.xml
@@ -1,24 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_height="wrap_content">
 
 
     <TextView
-        android:id="@+id/position"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <ImageView
+        android:id="@+id/team_position"
         android:layout_width="50dp"
         android:layout_height="50dp"/>
+
+    <ImageView
+        android:id="@+id/team_emblem"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintStart_toEndOf="@id/team_position"
+        />
 
     <TextView
         android:id="@+id/team_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="50dp"
+        app:layout_constraintStart_toEndOf="@id/team_emblem"/>
 
+    <TextView
+        android:id="@+id/team_point"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:textStyle="bold"
+        android:paddingRight="10dp"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
